--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "nebular-icons": "1.1.0",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.7.2",
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
